network: fix host list search looking bad on smaller screens

--- a/circle/network/static/network/network.less
+++ b/circle/network/static/network/network.less
@@ -11,3 +11,7 @@
   text-align: center;
   width: 60px;
 }
+
+.table-responsive {
+  margin-top: 15px;
+}
